--- a/android/assets/MyBundle_fi_FI.properties
+++ b/android/assets/MyBundle_fi_FI.properties
@@ -4,3 +4,8 @@ quit=Lopeta
 affirmative=Kyllä
 negative=Ei
 quitConfirmText=Lopeta peli?
+level=Taso
+yourTime=Saavutit ajan:
+continue=Jatka
+retry=Yritä Uudelleen
+loseMessage=Hävisit pelin!
