WorldSelectScreen ja NewScreenistä extendaavia siistitty

--- a/android/assets/MyBundle_fi_FI.properties
+++ b/android/assets/MyBundle_fi_FI.properties
@@ -11,3 +11,8 @@ retry=Yrit‰ Uudelleen
 loseMessage=H‰visit pelin!
 mainmenu=P‰‰valikko
 paused=Keskeytetty
+worldSelect=Valitse Maailma
+world1=ph:world1
+world2=ph:world2
+world3=ph:world3
+world4=ph:world4
