ConnectScreen päivitetty: Ulkoasu + Skip-painike

--- a/android/assets/MyBundle_fi_FI.properties
+++ b/android/assets/MyBundle_fi_FI.properties
@@ -16,3 +16,8 @@ world1=ph:world1
 world2=ph:world2
 world3=ph:world3
 world4=ph:world4
+scanDevices=Etsi laitteita
+startScan=Aloita
+scanning=Etsitään
+allowLocationData=Salli sijaintitietojen käyttö asetuksista
+skip=Ohita
