--- a/android/assets/MyBundle_fi_FI.properties
+++ b/android/assets/MyBundle_fi_FI.properties
@@ -18,6 +18,6 @@ world3=ph:world3
 world4=ph:world4
 scanDevices=Etsi laitteita
 startScan=Aloita
-scanning=Etsitään
+scanning=Etsitään...
 allowLocationData=Salli sijaintitietojen käyttö asetuksista
 skip=Ohita
