--- a/android/assets/MyBundle_fi_FI.properties
+++ b/android/assets/MyBundle_fi_FI.properties
@@ -21,4 +21,4 @@ startScan=Aloita
 scanning=Etsitään...
 allowLocationData=Salli sijaintitietojen käyttö asetuksista
 skip=Ohita
-scanEnd=Skannaus loppui
+scanEnd=Ei laitteita
