Ääkköset korjattu + fontti vaihdettu Roboto-boldiin

--- a/android/assets/MyBundle_fi_FI.properties
+++ b/android/assets/MyBundle_fi_FI.properties
@@ -1,15 +1,15 @@
 play=Pelaa
 highscores=Tulokset
 quit=Lopeta
-affirmative=Kyll‰
+affirmative=Kyll√§
 negative=Ei
 quitConfirmText=Lopeta peli?
 level=Taso
 yourTime=Saavutit ajan:
 continue=Jatka
-retry=Yrit‰ Uudelleen
-loseMessage=H‰visit pelin!
-mainmenu=P‰‰valikko
+retry=Yrit√§ Uudelleen
+loseMessage=H√§visit pelin!
+mainmenu=P√§√§valikko
 paused=Keskeytetty
 worldSelect=Valitse Maailma
 world1=ph:world1
@@ -18,7 +18,7 @@ world3=ph:world3
 world4=ph:world4
 scanDevices=Etsi laitteita
 startScan=Aloita
-scanning=Etsit‰‰n...
-allowLocationData=Salli sijaintitietojen k‰yttˆ asetuksista
+scanning=Etsit√§√§n...
+allowLocationData=Salli sijaintitietojen k√§ytt√∂ asetuksista
 skip=Ohita
 scanEnd=Ei laitteita
