--- a/android/assets/MyBundle_fi_FI.properties
+++ b/android/assets/MyBundle_fi_FI.properties
@@ -22,3 +22,5 @@ scanning=Etsitään...
 allowLocationData=Salli sijaintitietojen käyttö asetuksista
 skip=Ohita
 scanEnd=Ei laitteita
+nameText=Nimi
+maxChars=Max 10 kirjainta
