--- a/android/assets/MyBundle_fi_FI.properties
+++ b/android/assets/MyBundle_fi_FI.properties
@@ -24,3 +24,5 @@ skip=Ohita
 scanEnd=Ei laitteita
 nameText=Nimi
 maxChars=Max 10 kirjainta
+highscoreMessagePersonal=Pääsit henkilökohtaiseen top10:n!
+highscoreMessageWorld=Pääsit maailman top10:n!
