Highscoreviestit näytetään. Mahdollisuus skipata nettiin yhdistäminen. Highscoreruudussa paikka globaalille highsocrellekin

--- a/android/assets/MyBundle_fi_FI.properties
+++ b/android/assets/MyBundle_fi_FI.properties
@@ -24,5 +24,6 @@ skip=Ohita
 scanEnd=Ei laitteita
 nameText=Nimi
 maxChars=Max 10 kirjainta
-highscoreMessagePersonal=Pääsit henkilökohtaiseen top10:n!
-highscoreMessageWorld=Pääsit maailman top10:n!
+highscoreMessagePersonal=Pääsit henkilökohtaiseen top 10:n!
+highscoreMessageWorld=Pääsit maailman top 10:n!
+connectingHS=Haetaan maailman high score -listaa
