--- a/android/assets/MyBundle_fi_FI.properties
+++ b/android/assets/MyBundle_fi_FI.properties
@@ -27,3 +27,5 @@ maxChars=Max 10 kirjainta
 highscoreMessagePersonal=Pääsit henkilökohtaiseen top 10:n!
 highscoreMessageWorld=Pääsit maailman top 10:n!
 connectingHS=Haetaan maailman high score -listaa
+global=Maailma
+local=Henkilökohtainen
