--- a/android/assets/MyBundle_fi_FI.properties
+++ b/android/assets/MyBundle_fi_FI.properties
@@ -11,7 +11,7 @@ retry=Yritä Uudelleen
 loseMessage=Hävisit pelin!
 mainmenu=Päävalikko
 paused=Keskeytetty
-worldSelect=Valitse Maailma
+worldSelect=Valitse Maailma:
 world1=ph:world1
 world2=ph:world2
 world3=ph:world3
